# automail

./: Cargo.toml
src/: credentials.rs  fetch_mail.rs  main.rs  send_mail.rs
