[package]
name = "automail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

imap = "3.0.0-alpha.7"
lettre = "0.10.0-rc.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.56"
schemars = "0.8.8"
clap = { version = "3.1.9", features = ["derive"] }
mail-parser = "0.4.5"